test/simple/ill-typed/singletype_variant.caprice
(* TEST
  include refutable;
*)


let t : singletype (`A of int | `B of bool) =
  `A of int | `B of bool | `C of unit
